src/test/deca/syntax/invalid/renduInter01/05while_missing_condition.deca
// Description:
//      test de programme incorrect lexicalement (il manque une condition dans le parenthese)
//
// Resultats:
//      Erreur syntaxique
//      Ligne 10 : manque de condition

{
    int x = 4;
    while ( ) {
        x = 3;
    }

}

